--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=workshop6_pre
-
+server.port=4000
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.username=
 spring.data.redis.password=
 
+#SERVER_PORT
 #SPRING_DATA_REDIS_HOST
 #SPRING_DATA_REDIS_PORT
 #SPRING_DATA_REDIS_USERNAME=default
